--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   backend:
     build: src/backend
-    container_name: contrato-ai-backend
+    container_name: documento-ai-backend
     environment:
       - OPENAI_API_KEY=${OPENAI_API_KEY}
       - PINECONE_API_KEY=${PINECONE_API_KEY}
@@ -19,7 +19,7 @@ services:
     build:
       context: ./src/frontend
       dockerfile: Dockerfile
-    container_name: contrato-ai-frontend
+    container_name: documento-ai-frontend
     ports:
       - 3000:5173
     volumes:
