--- a/src/backend/Dockerfile
+++ b/src/backend/Dockerfile
@@ -1,4 +1,4 @@
-# Dockerfile para Documento AI Backend (FastAPI)
+# Dockerfile para Documento RAG Backend (FastAPI)
 FROM python:3.11-slim
 
 # Define o diretório de trabalho dentro do contêiner
