chore: change function name

--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "documento-ai-frontend",
+  "name": "documento-rag-frontend",
   "version": "0.0.1",
   "private": true,
   "scripts": {
