chore: libs langchain

--- a/src/backend/requirements.txt
+++ b/src/backend/requirements.txt
@@ -1,7 +1,7 @@
 langchain==0.3.18
 langchain-community==0.3.16
-langchain_openai
-langchain-core
+langchain-openai==0.3.23
+langchain-core==0.3.68
 pypdf==5.4.0
 python-dotenv==1.1.0
 openai==1.74.0
